<resources>
    <string name="app_name">Pelaporan PO</string>
    <string name="versi">Versi 1.0.0</string>
    <string name="copyright">Copyright \u00A9 2016 PT. Kuda Inti Samudera</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="menu1">Pre-Operation</string>
    <string name="menu2">Near Miss Report</string>
    <string name="menu3">Keluar</string>
    <string name="menu4">Riwayat</string>
</resources>
