<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/bt_padding_horizontal_medium"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="android.trikarya.pelaporanpo.Dashboard"
    android:orientation="vertical">
    <Button
        android:id="@+id/po"
        android:onClick="pilihMenu"
        android:layout_width="@dimen/bt_width"
        android:layout_height="@dimen/iv_size_dash"
        android:background="@drawable/shape_green_young"
        android:text="@string/menu1"
        android:textSize="@dimen/bt_textsize"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"/>
    <Button
        android:id="@+id/nm"
        android:onClick="pilihMenu"
        android:layout_width="@dimen/bt_width"
        android:layout_height="@dimen/iv_size_dash"
        android:background="@drawable/shape_green_young"
        android:text="@string/menu2"
        android:textSize="@dimen/bt_textsize"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"/>
    <Button
        android:id="@+id/riwayat"
        android:onClick="pilihMenu"
        android:layout_width="@dimen/bt_width"
        android:layout_height="@dimen/iv_size_dash"
        android:background="@drawable/shape_green_young"
        android:text="@string/menu4"
        android:textSize="@dimen/bt_textsize"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"/>
    <Button
        android:id="@+id/metu"
        android:onClick="pilihMenu"
        android:layout_width="@dimen/bt_width"
        android:layout_height="@dimen/iv_size_dash"
        android:background="@drawable/shape_green_young"
        android:text="@string/menu3"
        android:textSize="@dimen/bt_textsize"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"/>
</LinearLayout>
