<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="android.trikarya.pelaporanpo.Login"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/im_logo_size"
        android:src="@drawable/logo"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height_medium"
        android:drawableLeft="@mipmap/user"
        android:drawablePadding="@dimen/et_drawable_padding"
        android:paddingLeft="@dimen/et_padding_horizontal"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="@dimen/et_textsize"
        android:background="@drawable/shape_white"
        android:layout_marginBottom="@dimen/et_margin_vertical_big"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height_medium"
        android:drawableLeft="@mipmap/lock"
        android:drawablePadding="@dimen/et_drawable_padding"
        android:paddingLeft="@dimen/et_padding_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/et_textsize"
        android:background="@drawable/shape_white"
        android:layout_marginBottom="@dimen/et_margin_vertical_big"/>
    <Button
        android:id="@+id/signin"
        android:layout_width="@dimen/bt_width"
        android:layout_height="@dimen/bt_height"
        android:layout_marginTop="@dimen/bt_margin_vertical"
        android:background="@drawable/shape_green"
        android:drawableLeft="@mipmap/panah"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/et_textsize"
        android:drawablePadding="@dimen/bt_drawable_padding"
        android:paddingLeft="@dimen/bt_padding_horizontal"
        android:layout_gravity="center_horizontal"
        android:onClick="Signin"/>
</LinearLayout>
